--- a/tips-jitu-sweet-bonanza-1000.html
+++ b/tips-jitu-sweet-bonanza-1000.html
@@ -131,7 +131,7 @@
                 </tr>
                 <tr>
                     <td>Game Play</td>
-                    <td>🔘Wild West Gold,Gates Of Olympus, Sweet Bonanza, Mahjong Ways</td>
+                    <td>🔘Gates Of Olympus, Spaceman, Sweet Bonanza, Mahjong Ways</td>
                 </tr>
                 <tr>
                     <td>Proses Depo - WD</td>
